
SVN
-------------------------------

XML:   Resolved issue CASTOR-1567 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Thorough JavaDoc cleanup - part II.
       Details: http://jira.codehaus.org/browse/CASTOR-1567
       (Werner - 20060920)

XML:   Resolved issue CASTOR-1563 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Thorough JavaDoc cleanup.
       Details: http://jira.codehaus.org/browse/CASTOR-1563
       (Werner - 20060919)

XML:   Resolved issue CASTOR-1307 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with special characters as part of <xsd:annotation> elements.
       Details: http://jira.codehaus.org/browse/CASTOR-1307
       (Werner - 20060918)

XML:   Resolved issue CASTOR-1562 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Minor refactoring of the java.exolab.javasource package.
       Details: http://jira.codehaus.org/browse/CASTOR-1562
       (Werner - 20060918)

XML:   Resolved issue CASTOR-1550 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed issue with self-sufficiency of XML JAR.
       Details: http://jira.codehaus.org/browse/CASTOR-1550
       (Werner - 20060916)

XML:   Resolved issue CASTOR-1561 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Enabled checkstyle for javasource package and fixed most of the warnings.
       Details: http://jira.codehaus.org/browse/CASTOR-1561
       (Ralf - 20060916)

XML:   Resolved issue CASTOR-1557 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Moved java.util.Iterator-specific code from CollectionInfo to CollectionInfoJ2.
       Details: http://jira.codehaus.org/browse/CASTOR-1557
       (Ralf - 20060916)

XML:   Resolved issue CASTOR-1560 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Thorough JavaDoc update for javasource package.
       Details: http://jira.codehaus.org/browse/CASTOR-1560